--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                     Phaser.AUTO, // <--- REDEREING ENGINE CHOICE
                     'gamestage', // <--- ELEMENT THAT LOUADS THE GAME (ID)
                 );
+                    
+                // ------------------
+                // BELOW IS WHERE WE WILL PUT OUR GAME STATES TO BE RAN SEQUENTIALLY UPON GAME EXECUTION
             }
         
         </script>
